<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>patrol_algorithms_magec</name>
  <version>0.0.0</version>
  <description>Algorithm implementations for the IROS 2024 paper.</description>
  <maintainer email="anthony.goeckner@northwestern.edu">Anthony Goeckner</maintainer>
  <license>TODO: License declaration</license>


  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>networkx</depend>
  <depend>lifecycle_msgs</depend>
  <depend>patrolling_sim_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
