<?xml version="2.0"?>
<package>
  <name>patrolling_sim</name>
  <version>3.0.0</version>
  <description>Multi-Robot Patrolling Gazebo/ROS 2 Simulation Package.</description>

  <maintainer email="davidbsp@ingeniarius.pt">David Portugal</maintainer>
  <maintainer email="iocchi@dis.uniroma1.it">Luca Iocchi</maintainer>
  <maintainer email="joao.castilho@isr.uc.pt">João Castilho</maintainer>
  <maintainer email="anthony.goeckner@northwestern.edu">Anthony Goeckner</maintainer>

  <license>BSD</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <depend>actionlib</depend> -->
  <depend>nav2_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>stage_ros</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>